Fix customizer color picker spacing issue

--- a/assets/sass/admin/customizer/_control.scss
+++ b/assets/sass/admin/customizer/_control.scss
@@ -1347,7 +1347,7 @@ $text_color: #555d66;
 		clear: both;
 	}
     .wp-color-result-text {
-        line-height: 23px;
+        line-height: 28px;
     }
     .customify--field-heading{
         h3.customify-field--heading {
