--- a/assets/sass/admin/customizer/customizer.scss
+++ b/assets/sass/admin/customizer/customizer.scss
@@ -90,6 +90,14 @@ $builder_active_color: #0073aa;
     }
 }
 
+.customize-control {
+	.wp-color-result {
+		.color-alpha {
+			height: 100%!important;
+		}
+	}
+}
+
 @import "control";
 @import "header_footer_builder";
 @import "_builder_v1";
